--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  background-color: #ebebeb;  
+  font-family: 'Roboto', sans-serif;
+}
+
+.inv{
+  background-color: rgba(255, 255, 255, 0);
+  text-decoration: none !important;
+}
