--- a/src/components/RealizarPedido/realizarPedido.module.css
+++ b/src/components/RealizarPedido/realizarPedido.module.css
@@ -1,10 +1,11 @@
 .formContainer {
-    padding: 20px;
-    width: 85%;
+    padding: 10px;
+    width: 90%;
     height: auto;
     background-color: #fff;
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 30%);
     border-radius: 10px;
+    margin-bottom: 130px;
 }
 
 .titulo {
@@ -14,6 +15,7 @@
     color: #000000;
     font-size: 32px;
 }
+
 .subTitulo {
     margin-top: 1rem;
     margin-bottom: 0.5rem;
