--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+:root {
+  --color-background: #EAEBED;
+  --color-primary: #006989;
+  --color-secondary: #7c7e81;
+  --color-accent: #007090;
+  --color-highlight: #01A7C2;
+}
+
+
 .App {
   text-align: center;
 }
