--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -2,28 +2,30 @@
     left: 0;
     bottom: 0;
     font-size: 12px;
-    color: #616161;
+    color: var(--color-secondary);
     width: 100%;
     height: 120px;
-    background-color: #fff !important;
+    background-color: var(--color-background) !important;
     position: fixed;
     bottom: 0;
     box-shadow: 0 0 1px 0 #000;
     display: flex;
     align-items: center;
-  }
+}
 
-.title{
+.title {
     font-size: 15px;
-    font-weight: 900;
+    font-weight: 500;
+    color: var(--color-primary);
 }
 
-.subTitle{
+.subTitle {
     font-size: 13px;
-    font-weight: 600;
+    font-weight: 500;
+    color: var(--color-accent);
 }
 
-.integrantes{
+.integrantes {
     width: 450px;
     margin-left: 30px !important;
 }
