Se cambio el fondo a blanco

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --color-background: #EAEBED;
+  --color-background: #fff;
   --color-primary: #006989;
   --color-secondary: #7c7e81;
   --color-accent: #007090;
