--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@
 
 .App {
   text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  font-family: 'Poppins', sans-serif !important;
 }
 
 .App-logo {
