--- a/src/components/RealizarPedido/realizarPedido.module.css
+++ b/src/components/RealizarPedido/realizarPedido.module.css
@@ -1,3 +1,7 @@
+.body {
+    font-family: 'Poppins', sans-serif !important;
+}
+
 .formContainer {
     padding: 10px;
     width: 90%;
@@ -6,12 +10,13 @@
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 30%);
     border-radius: 10px;
     margin-bottom: 130px;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 .titulo {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-    font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
     color: var(--color-primary);
     font-size: 32px;
     font-weight: bold;
@@ -20,7 +25,7 @@
 .subTitulo {
     margin-top: 1rem;
     margin-bottom: 0.5rem;
-    font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
     color: var(--color-secondary);
     font-size: 24px;
 }
@@ -39,6 +44,7 @@
     font-size: 16px;
     border-radius: 5px;
     cursor: pointer;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 .btn-realizar-pedido:hover {
