Se agrego un nuevo card para el carrito de compra

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 *{
   background-color: #ebebeb;  
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .inv{
