--- a/src/components/CarritoCompra/carritocompra.module.css
+++ b/src/components/CarritoCompra/carritocompra.module.css
@@ -15,6 +15,14 @@
     font-size: 20px;
 }
 
+.total {
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    font-family: 'Poppins', sans-serif !important;
+    color: var(--color-primary);
+    font-size: 20px;
+}
+
 .page {
     padding: 10px;
     justify-content: center;
