--- a/src/components/RealizarPedido/realizarPedido.module.css
+++ b/src/components/RealizarPedido/realizarPedido.module.css
@@ -22,6 +22,11 @@
     font-weight: bold;
 }
 
+.info{
+    font-size: 12px;
+    color: var(--color-primary)
+}
+
 .subTitulo {
     margin-top: 1rem;
     margin-bottom: 0.5rem;
