--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,15 @@ code {
 .inv{
   background-color: rgba(255, 255, 255, 0);
   text-decoration: none !important;
+
+}
+
+#domicilio
+{
+  margin-bottom: 19px;
+}
+
+#entrega
+{
+  margin-bottom: 19px;
 }
